fix overflow issue of form

--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,9 @@ body {
 
 .page {
   position: absolute;
-  top: 0;
+  top: 100px;
   left: 0;
   right: 0;
-  overflow: hidden;
 }
 
 .fade-appear,
